--- a/EVA_apps/EdurellVideoAnnotation/templates/burst_results.html
+++ b/EVA_apps/EdurellVideoAnnotation/templates/burst_results.html
@@ -89,7 +89,10 @@
                         <tbody id="conceptsTable"></tbody>
                       </table>-->
                       <div class="list-group list-group-flush" id="conceptsTable">
-
+                        <div class="list-group-item list-group-item-action conceptList">
+                          <input type="text" oninput="filterVocabulary(this.value)" class="form-control filter-vocabulary-class" autocomplete="off" id="filter-vocabulary"  placeholder="Search concept...">
+                          <div id="conceptVocabularyContentBurst"></div> 
+                        </div>
                       </div>
                   </div>
 
