almost finished page 1 of comparison

--- a/EVA_apps/EdurellVideoAugmentation/src/react-app/src/components/Comparison/Querybar.css
+++ b/EVA_apps/EdurellVideoAugmentation/src/react-app/src/components/Comparison/Querybar.css
@@ -3,3 +3,12 @@
     margin: 0px;
     padding: 50px;
   }
+
+
+.buttonCenter{
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  background-color: blanchedalmond;
+  color:aqua;
+}
