--- a/EVA_apps/EdurellVideoAnnotation/templates/burst_results.html
+++ b/EVA_apps/EdurellVideoAnnotation/templates/burst_results.html
@@ -207,9 +207,12 @@
                 <a class="nav-link" id="rels-tab"
                    data-toggle="tab" href="#rels" role="tab" aria-controls="contact" aria-selected="false">Relations</a>
               </li>
-            <li class="button">
-              <button type="button" onclick="downloadBurstGraph()" class="btn btn-primary">Save graph</button>
-            </li>
+              <li class="button">
+                <button type="button" onclick="saveBurstGraph()" class="btn btn-primary">Save graph</button>
+              </li>
+              <li class="button">
+                <button type="button" onclick="downloadBurstGraph()" class="btn btn-primary">Download graph</button>
+              </li>
           </ul>
 
             <div class="tab-content" id="myTabContent">
@@ -251,7 +254,7 @@
             </div>
 
             <div class="tab-pane fade" id="rels" role="tabpanel" aria-labelledby="rels-tab">
-                <div id="network" style=""></div>
+                <div id="network"></div>
              </div>
           </div>
 
