code cleanup and video classification testing

--- a/EVA_apps/EdurellVideoAnnotation/templates/video_selection.html
+++ b/EVA_apps/EdurellVideoAnnotation/templates/video_selection.html
@@ -66,10 +66,10 @@
         {% endfor %}
 
     </div>
-
+    <!-----SHOULD BE MOVED UP TO COVER THE SEARCH INPUT AND BUTTON---->
     <div class="container" id="loading" style="display: none; margin-top: 2%">
         <div class="text-center" style="margin-top: 4%">
-            <p class="titleLower"> The video is being downloaded.. </p>
+            <p class="titleLower"> The video is being downloaded and analyzed.. </p>
           <div class="spinner-border text-primary" role="status">
             <span class="sr-only">Loading...</span>
           </div>
@@ -108,7 +108,7 @@
 
             <div class="container" id="loading2" style="display: none; margin-top: 2%">
                 <div class="text-center" style="margin-top: 4%">
-                   <p class="titleLower"> The video is being downloaded.. </p>
+                   <p class="titleLower"> The video is being downloaded and analyzed.. </p>
                   <div class="spinner-border text-primary" role="status">
                     <span class="sr-only">Loading...</span>
                   </div>
