--- a/EVA_apps/EdurellVideoAnnotation/templates/burst_results.html
+++ b/EVA_apps/EdurellVideoAnnotation/templates/burst_results.html
@@ -241,7 +241,7 @@
                           <th scope="col">Concept</th>
                           <th scope="col">Start</th>
                           <th scope="col">End</th>
-                          <th scope="col">Type</th>
+                          <th scope="col">Type (V = video)</th>
                           <th scope="col"></th>
                         </tr>
                       </thead>
