--- a/EVA_apps/EdurellVideoAnnotation/templates/burst_results.html
+++ b/EVA_apps/EdurellVideoAnnotation/templates/burst_results.html
@@ -61,7 +61,7 @@
     }
     </script>
 
-    <div style="padding-left: 5%; padding-right: 5%;" >
+    <div style="padding-left: 5%; padding-right: 5%; height: 90vh; overflow-y: auto;" >
         <div id="checkConcepts">
             <p class="title"> Launch burst analysis </p>
             <p> Add or remove concepts, then launch Burst Analysis</p>
@@ -69,23 +69,25 @@
             <div class="row" id="checkConcepts">
 
               <div  class="col-7">
-
-                <ul class="nav nav-tabs" id="myTab" role="tablist">
-                  <li class="nav-item">
-                    <a class="nav-link active" id="concepts-tab" data-toggle="tab" href="#concepts" role="tab" aria-controls="home" aria-selected="true">Vocabulary</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" id="add-tab" data-toggle="tab" href="#add-concept" role="tab" aria-controls="profile" aria-selected="false">Add new concept</a>
-                  <li class="nav-item">
-                    <a class="nav-link" id="add-tab" data-toggle="tab" href="#add-synonyms" role="tab" aria-controls="profile" aria-selected="false">Manage synonyms</a>
-                  </li>
-                </ul>
+                <div style="display: flex; justify-content: space-between; align-items: right;"> 
+                  <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item">
+                      <a class="nav-link active" id="concepts-tab" data-toggle="tab" href="#concepts" role="tab" aria-controls="home" aria-selected="true">Vocabulary</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" id="add-tab" data-toggle="tab" href="#add-concept" role="tab" aria-controls="profile" aria-selected="false">Add new concept</a>
+                    <li class="nav-item">
+                      <a class="nav-link" id="add-tab" data-toggle="tab" href="#add-synonyms" role="tab" aria-controls="profile" aria-selected="false">Manage synonyms</a>
+                    </li>
+                  </ul>
+                  <button  onclick="runSemiBurst()" class="btn btn-primary" style="float: right;margin-right: 10%">Launch burst Analysis</button>
+                </div>
 
                 <!-- Body of the modal Concepts & Synonyms -->
                 <div class="tab-content tab-body" id="myTabContent">
 
                   <!-- TAB 1 - Concepts Vocabulary -->
-                  <div class="tab-pane fade show active tab-body-1" id="concepts" role="tabpanel" aria-labelledby="concepts-tab" style="max-height:400px;overflow:auto;">
+                  <div class="tab-pane fade show active tab-body-1" id="concepts" role="tabpanel" aria-labelledby="concepts-tab" style="max-height:400px;overflow:auto;border-bottom:3px solid rgba(200,200,200,0.5);border-left:3px solid rgba(200,200,200,0.5);border-right:3px solid rgba(200,200,200,0.5);">
                       <!--<table class="table">
                         <tbody id="conceptsTable"></tbody>
                       </table>-->
@@ -163,11 +165,10 @@
               
               <div id="right-body" class="right-body-class">
                 <div class="col">
-                  <p class="titleLower"> Transcript </p>
-                  <div id="transcript" style="overflow-y: scroll;max-height:400px"></div>
+                  <p class="titleLower" style="margin-bottom:2px; margin-top:10px"> Transcript </p>
+                  <div id="transcript" style="overflow-y: scroll;max-height:400px; border:3px solid rgba(200,200,200,0.5); padding-left: 5px;"></div>
                 </div>
-                <br>
-                <div id="selectedConceptBox" class="selected-concept-box">
+                <div id="selectedConceptBox" class="selected-concept-box" style="margin-left: 3%; margin-top:1%">
                   <p class="padding-left same-line">Selected Concept:<span id="transcript-selected-concept" class="selected-concept same-line">--</span></p>
                   <div class="padding-left">
                       <p class="description-selected-concept same-line">Synonyms: </p>
@@ -177,14 +178,13 @@
               </div>
 
             </div>
-            <button  onclick="runSemiBurst()" class="btn btn-primary" style="float: right;margin-top: 1%">Launch burst Analysis</button>
 
 
         </div>
 
         <div class="container" id="loading" style="display: none; margin-top: 2%">
             <div class="text-center" style="margin-top: 4%">
-              <p class="titleLower"> Extracting burst.. </p>
+              <p id="loadingText" class="titleLower"> Extracting burst.. </p>
               <div class="spinner-border text-primary" role="status">
                 <span class="sr-only">Loading...</span>
               </div>
@@ -193,31 +193,28 @@
 
         <div class="container" id="results" style="display: none;">
             <p class="title"> Burst analysis results</p>
+            <div style="display: flex; justify-content: space-around; align-items: right;"> 
+              <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" id="data_summary-tab"
+                     data-toggle="tab" href="#summary" role="tab" aria-controls="home" aria-selected="true">Data Summary</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="defs-tab"
+                     data-toggle="tab" href="#defs" role="tab" aria-controls="profile" aria-selected="false">Definitions</a>
+                </li>
+                <li class="nav-item" >
+                  <a class="nav-link" id="rels-tab"
+                     data-toggle="tab" href="#rels" role="tab" aria-controls="contact" aria-selected="false">Relations</a>
+                </li>
+              </ul>
+              <button type="button" onclick="downloadObjectAsJson($burstGraph,'graph')" class="btn btn-primary" style="float:right;">Download graph</button>
+              <button id="refinement-button" type="button" onclick="refineBurstWithVideoAnalysis()" class="btn btn-primary" style="display:none; margin-left:10%;">Refine analysis</button>
+            </div>
 
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link active" id="data_summary-tab"
-                   data-toggle="tab" href="#summary" role="tab" aria-controls="home" aria-selected="true">Data Summary</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="defs-tab"
-                   data-toggle="tab" href="#defs" role="tab" aria-controls="profile" aria-selected="false">Definitions</a>
-              </li>
-              <li class="nav-item" >
-                <a class="nav-link" id="rels-tab"
-                   data-toggle="tab" href="#rels" role="tab" aria-controls="contact" aria-selected="false">Relations</a>
-              </li>
-              <li class="button">
-                <button type="button" onclick="saveBurstGraph()" class="btn btn-primary">Save graph</button>
-              </li>
-              <li class="button">
-                <button type="button" onclick="downloadBurstGraph()" class="btn btn-primary">Download graph</button>
-              </li>
-          </ul>
-
-            <div class="tab-content" id="myTabContent">
+          <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="summary" role="tabpanel" aria-labelledby="data_summary-tab">
-                <div id="data_summary"></div>
+              <div id="data_summary"></div>
             </div>
 
             <div class="tab-pane fade" id="defs" role="tabpanel" aria-labelledby="defs-tab">
@@ -234,34 +231,31 @@
                  </div>
 
 
-                    <div class="col" style="">
-                    <table class="table" style="max-height:450px">
+                  <div class="col" style="width: 700px;">
+                    <table class="table" style="max-height:650px">
                       <thead>
                         <tr>
                           <th scope="col">Concept</th>
                           <th scope="col">Start</th>
                           <th scope="col">End</th>
-                          <th scope="col">Type (V = video)</th>
+                          <th scope="col">Type</th>
                           <th scope="col"></th>
                         </tr>
                       </thead>
                       <tbody id="defsTable">
                       </tbody>
-                  </table>
-                </div>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="tab-pane fade" id="rels" role="tabpanel" aria-labelledby="rels-tab">
-                <div id="network"></div>
-             </div>
+              <div id="network" style="border:3px solid rgba(200,200,200,0.5);"></div>
+            </div>
+          
           </div>
-
-
-
-
-
+          
 
         </div>
 
@@ -272,12 +266,11 @@
 
 
 
-
   {% endblock %}
   </body>
 
 {% block scripts %}
-<script src="{{ url_for('static', filename='autocomplete.js') }}"></script>
+<!-- <script src="{{ url_for('static', filename='autocomplete.js') }}"></script> -->
 <script src="{{ url_for('static', filename='burstVocabulary.js') }}"></script>
 <script src="{{ url_for('static', filename='graph_visualization.js') }}"></script>
 <script>
@@ -295,6 +288,7 @@
     let $concepts = {{ concepts|tojson }};
     $concepts.sort()
     let $conceptVocabulary = {};
+    let $burstGraph = null;
     let $synonymList = [];
     let $lemmatizedSubs = {{ lemmatized_subtitles|tojson }};
     let $video_id = {{ video_id|tojson }};
@@ -302,31 +296,44 @@
 
     let $typeAnalysis = {{ type|tojson }};
     let $title = {{ title|tojson }};
-    async function runSemiBurst() {addActive
+    async function runSemiBurst() {
       $burstSynonym = await popup(); 
-      launchBurstAnalysis("semi")
+      let result = await launchBurstAnalysis("semi")
+      if (result.can_be_refined) {
+        enableRefinementButton()
+      }
+      $definitions = result.definitions
+      console.log($definitions)
     }
 
     async function getVocabulary() {
       $conceptVocabulary = await getConceptVocabulary();
-      console.log($typeAnalysis+ " in burst_results.html getVocabulary()");
+
       if($typeAnalysis == "semi"){
         addSubtitles();
-        //printConcepts();
+        //printConcepts()
         showVocabularyBurst($conceptVocabulary);
+        
       }
       else{
         $burstSynonym = await popup();
-        launchBurstAnalysis($typeAnalysis);
+        let result = await launchBurstAnalysis($typeAnalysis)
+        if (result.can_be_refined) {
+          enableRefinementButton()
+        }
+        $definitions = result.definitions
+        console.log($definitions)
       }
-
+      
       
     }
-
+    console.log("gettung vocabulary");
     let video = document.getElementById("video-active");
     getVocabulary();
 
-
+    function enableRefinementButton(){
+      document.getElementById("refinement-button").style.display = "block"
+    }
 
     function loading(){
         document.getElementById("checkConcepts").style.display = "none"
