code refactoring and html updates

--- a/EVA_apps/EdurellVideoAnnotation/templates/burst.html
+++ b/EVA_apps/EdurellVideoAnnotation/templates/burst.html
@@ -32,7 +32,7 @@
 
     <div class="container" id="mainContainer" style="margin-top: 10px">
 
-      <p class="title"> Burst </p>
+      <p class="title"> Auto-annotation of Prerequisite Relations </p>
 
 
     <div id="tab_analysis_type">
@@ -44,11 +44,11 @@
          <input type="radio" class="analysis_type" name="analysis_type" id="auto" value="Automatic extraction">
          <!--<input type="radio" class="analysis_type" name="analysis_type" id="video" value="Automatic&Video extraction">-->
 
-           <label for="semi" class="option option-1">
+           <label for="semi" class="option option-1" title="this mode allows extracted concepts to be edited before starting automatic prerequisite extraction">
              <div class="dot"></div>
               <span>Semi automatic</span>
               </label>
-           <label for="auto" class="option option-2">
+           <label for="auto" class="option option-2" title="this mode does not allow manual editing: concepts and prerequisite relations are both extracted automatically">
              <div class="dot"></div>
               <span>Automatic</span>
            </label>
